tests/short_assign_type_mismatch_bad.sl
// Verifies short assignment checks existing local assignment type.
fn f() {
	var x bool = false
	x := 1
}
